Fixing flexcol gap for actor sheets

--- a/sass/actors/_vehicle.scss
+++ b/sass/actors/_vehicle.scss
@@ -15,6 +15,4 @@
   width: 100%;
   gap: 10px;
   padding: v.$padding;
-  margin-bottom: v.$padding;
-  margin-top: v.$padding;
 }
